[package]
name = "rust-i-have-to"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.3" }
serde = { version = "1.0.194" }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13" }
tower-livereload = "0.9.1"
